--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ frank_jwt = ""
 ring = ""
 serde = ""
 serde_json = ""
+diesel = { version = "1.4.2", features = ["mysql","r2d2"] }
+dotenv = "0.9.0"
+r2d2 = ""
